--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.1.10",
+    "@heroicons/react": "^2.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "flowbite-react": "^0.10.2",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
+    "react-switch": "^7.0.0",
+    "react-toastify": "^10.0.6",
+    "tailwindcss": "^3.4.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -23,6 +37,9 @@
       "react-app/jest"
     ]
   },
+  "license": "MIT",
+  "author": "Abdul Ghafoor",
+  "description": "conatct me at abdulghafoor1525@gmail.com",
   "browserslist": {
     "production": [
       ">0.2%",
